# memetic_algorithm_symbolic_regresion

./: .gitignore  CMakeLists.txt  Makefile
app/: main.c  main.cpp
documentation/desing/: general_program_flow.drawio
include/: data_structures.h  equation.h  fitness.h  function.h  genetic_operation.h  population.h
include/c/: data.h  data_structures.h  equation.h  fitness.h  function.h  genetic_operation.h  genetic_program.h  individual.h  node.h  optimization.h  optimizer.h  population.h  terminal.h
include/cuda/: equation.cuh  fitness.cuh  genetic_operation.cuh  genetic_program.cuh  individual.cuh  optimizer.cuh  population.cuh
src/: equation.c  fitness.c  function.c  genetic_operation.c  population.c  terminal.c
src/c/: data.c  data.cpp  equation.c  equation.cpp  fitness.c  fitness.cpp  function.c  function.cpp  genetic_operation.c  genetic_operation.cpp  genetic_program.c  genetic_program.cpp  individual.cpp  node.cpp  optimization.c  optimizer.c  optimizer.cpp  population.c  population.cpp  script.sh  terminal.c  terminal.cpp
src/cuda/: .genetic_program.cu.swo  cuda_source.cu  equation.cu  fitness.cu  genetic_operation.cu  genetic_program.cu  individual.cu  optimizer.cu  population.cu
